--- a/style.css
+++ b/style.css
@@ -1,6 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 * {
     font-family: "Roboto", sans-serif;
+    box-sizing: border-box;
+}
+
+body{
+    background: #1d2127;
+    color: #fff;
+    padding: 0;
+    margin: 0;
+}
+
+h1{
+    margin: 0 0 0 8px;
+    padding-top: 8px;
+}
+
+.bar{
+    background: #464b55;
+    padding: 10px;
+    display: flex;
+}
+
+.logo{
+    width: 50px;
+    height: 50px;
 }
